css/master.css
/*********Fonts**********/
@import url(http://fonts.googleapis.com/css?family=Muli:300);
/*******GeneralCSS*******/
html{
    height:100%;   
}    
body{
    max-width:400px;
    max-height:480px;
    width:100%;
    margin-left:auto;
    margin-right:auto;
    margin-top:11%;
    margin-bottom:2%;
    padding:0;
    background-color:#ffffff; 
}
h1,h2,h3,h4,h5,h6{
    margin: 0;
    padding: 0;
    font-weight: normal;
    font-family: 'Muli', sans-serif;   
}
.busImage{
    background-image:url(../images/bus_blue.png);
    background-size: 100% 100%;
    min-height:115px;
    margin:0;
    margin-top:50px;
}
.resourceLink{
    font-family: 'Muli', sans-serif;
    font-weight:800;
    font-size:1.5em;
    color:#03497E;
    text-decoration:underline;
    padding-top:10px;
    padding-bottom:10px;
    margin-top:10px;
}
header {
    position:fixed;
    width:396px;
}

#contentWrapper{
    /*border-left:2px solid #808080;
    border-right:2px solid #808080;*/
    max-height:480px;
    overflow-y:auto;
}

#colorBar{
    width:100%;
    height:20px;
    background-color:#03497E;
   /* border-left:2px solid #808080;
    border-right:2px solid #808080;*/
}
#pageTitle{
    width:100%;
    height:50px;
    text-align:center;
    font-family: 'Muli', sans-serif;
    font-weight:800;
    padding-top:20px;
    background-color:#E8E8E8;
    color:#FE4B28;
    border-bottom-style:outset;
   /* border-left:2px solid #808080;
    border-right:2px solid #808080;*/
    
}
#home {
    /*border-left:1px solid #808080;
    border-right:1px solid #808080;*/
}

/*********Menu***********/
button, section{
    margin:0;
    padding:0;
    border:0;
}

#buttonMenu{
    margin:auto;
    max-width:100%;
    position:fixed;
    bottom:0;
    left:50%;
    margin-left:-200px;
    margin-bottom:2%;
    width: 400px;
}
#buttonMenu button{
    text-align:center; 
    border-left: 1px solid #E8E8E8;
    margin:0;
    padding: .8em .8em 2.3em .8em;
    font-size: 1em;
    background-color:#FE4B28;
    background-image:url(../images/menuIcons.png);
    background-repeat:no-repeat;
    color:#E8E8E8;
    width: 25%;
    
}
#buttonMenu button:active{
    background-color:#03497E;
}
#buttonMenu .btnhome {
    background-position: -5px 38px;

}
#buttonMenu .btnroute{
    background-position: -85px 38px;
}
#buttonMenu .btnbus{
    background-position: -200px 38px;
}
#buttonMenu .btnrecent{
    background-position: -300px 38px;
}

/*********Begin Routes, Recent Routes Styles***************/
a{
	color: #03497E;
	
}
#routeNum{
    margin-top:.5em;
    text-align:center;
    font-size:1.5em;
    color:#E8E8E8;
}
.route-list{
	width:100%;
   /* border-left:2px solid #808080;
    border-right:2px solid #808080;*/
    /*border-top:1px solid #808080;*/
    font-family: 'Muli', sans-serif;
    font-weight:300;
    text-align:center;
    
}

.expand{
	background-color:#03497E;
	color: #E8E8E8;
	font-size: 1.5em;
	border-radius: 50%;
	display: inline-block;
	width: 1em;
	height: 1em;
	text-align: center;
	line-height: .95em;
	font-weight: bold;
	float: right;
	margin-right: 3em;
	margin-top: .75em;
	-webkit-transition: -webkit-transform .5s;
    -moz-transition: -moz-transform .5s;
    transition: transform .5s;
	cursor: pointer;
}

.route {
	text-align:center;
	padding-top: .5em;
	margin-left: 6em;
	margin-right: 7em;
}

section .route-info {
  font-style: normal;
}
.routeGo{
    display:none;
}
.profile{
    clear: both;
    margin-top: 3em;
    margin-bottom: 3em;
}
.route-info{
	background-color:#03497E;
	color: #E8E8E8;
	border-radius: 1em;
	text-align: left;
	margin-left: 7em;
	margin-right: 7em;
	max-height: 0px;
	padding: 1em;
	padding-bottom: 0;
	padding-top: 2px;
	overflow: hidden;
	-webkit-transition: all .5s;
    -moz-transition: all .5s;
    transition: all .5s;    
}
.profile.expanded .route-info{
	max-height: 32em;
    padding:1em;
	padding-top: .25em;
    margin-left: 1em;
    margin-right: 4.25em;
}
.profile.expanded .expand{
	-webkit-transform: rotate(45deg) translate(-17px, 30px);
    -moz-transform: rotate(45deg) translate(-17px, 30px);
    transform: rotate(45deg) translate(-17px, 30px);
    margin-right:1.5em;
}
.profile.expanded {
    margin-top:86px;   
}

.profile.expanded .routeGo{
	background-color:#03497E;
	color: #E8E8E8;
	font-size: 1.5em;
	border-radius: 50%;
	display: inline-block;
	width: 1em;
	height: 1em;
	text-align: center;
	line-height: .95em;
	font-weight: bold;
	float: right;
	margin-right: -2.35em;
	margin-top: .75em;
	-webkit-transition: -webkit-transform .5s;
    -moz-transition: -moz-transform .5s;
    transition: transform .5s;
	cursor: pointer;
}


.routeMap img{
    max-width:100%;
}
/*********End Routes, Recent Routes Styles***************/
/******************Begin Map Styles**********************/
#map-canvas{
    height:440px;
    /*border-left:2px solid #808080;
    border-right:2px solid #808080;*/
}
/********************End Map Styles**********************/

